Give ids to buttons(to access with DOM)

--- a/index.html
+++ b/index.html
@@ -9,31 +9,31 @@
 </head>
 <body>
     <div>
-        <button>
+        <button id="one">
             1
         </button>
-        <button>
+        <button id= "two">
             2
         </button>
-        <button>
+        <button id="three">
             3
         </button>
-        <button>
+        <button id = "four">
             4
         </button>
-        <button>
+        <button id = "five">
             5
         </button>
-        <button>
+        <button id = "six">
             6
         </button>
-        <button>
+        <button id = "seven">
             7
         </button>
-        <button>
+        <button id = "eight">
             8
         </button>
-        <button>
+        <button id = "nine">
             9
         </button>
 
