give id to calc. display area

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
     </div>
     <div>
         Display
-        <textarea readonly></textarea>
+        <textarea readonly id = "display"></textarea>
     </div>
 </body>
 </html>
