--- a/index.html
+++ b/index.html
@@ -36,6 +36,22 @@
         <button id = "nine">
             9
         </button>
+        <button id = "zero">
+            0
+        </button>
+        <button id = 'plus'>
+            +
+        </button>
+        <button id = 'minus'>
+            -
+        </button>
+        <button id = 'multiply'>
+            *
+        </button>
+        <button id = 'divide'>
+            /
+        </button>
+
 
     </div>
     <div>
