Calc for multi digit nummbers

--- a/index.html
+++ b/index.html
@@ -51,6 +51,10 @@
         <button id = 'divide'>
             /
         </button>
+        <button id = 'equals'>
+            =
+        </button>
+
 
 
     </div>
