--- a/index.html
+++ b/index.html
@@ -5,63 +5,99 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" href="styles.css">
     <title>Calculator</title>
 </head>
 <body>
-    <div>
-        <button id="one">
-            1
-        </button>
-        <button id= "two">
-            2
-        </button>
-        <button id="three">
-            3
-        </button>
-        <button id = "four">
-            4
-        </button>
-        <button id = "five">
-            5
-        </button>
-        <button id = "six">
-            6
-        </button>
-        <button id = "seven">
-            7
-        </button>
-        <button id = "eight">
-            8
-        </button>
-        <button id = "nine">
-            9
-        </button>
-        <button id = "zero">
-            0
-        </button>
-        <button id = 'plus'>
-            +
-        </button>
-        <button id = 'minus'>
-            -
-        </button>
-        <button id = 'multiply'>
-            *
-        </button>
-        <button id = 'divide'>
-            /
-        </button>
-        <button id = 'equals'>
-            =
-        </button>
+    <div class = "container">
+        <div class="calc-screen">
+            <div class="calc-screen">
+                <div class="calc-typed">2955</div>
+            </div>
+            <div class="calc-button-row">
+                <div class="button c">C</div>
+<!--                <div class="button l">≠</div>-->
+<!--                <div class="button l">%</div>-->
+                <div class="button l">/</div>
+            </div>
+            <div class="calc-button-row">
+                <div class="button">7</div>
+                <div class="button">8</div>
+                <div class="button">9</div>
+                <div class="button l">x</div>
+            </div>
+            <div class="calc-button-row">
+                <div class="button">4</div>
+                <div class="button">5</div>
+                <div class="button">6</div>
+                <div class="button l">−</div>
+            </div>
+            <div class="calc-button-row">
+                <div class="button">1</div>
+                <div class="button">2</div>
+                <div class="button">3</div>
+                <div class="button l">+</div>
+            </div>
+            <div class="calc-button-row">
+<!--                <div class="button">.</div>-->
+                <div class="button">0</div>
+                <div class="button">
+                    <</div>
+                <div class="button l">=</div>
+            </div>
+<!--            <button id="one">-->
+<!--                1-->
+<!--            </button>-->
+<!--            <button id= "two">-->
+<!--                2-->
+<!--            </button>-->
+<!--            <button id="three">-->
+<!--                3-->
+<!--            </button>-->
+<!--            <button id = "four">-->
+<!--                4-->
+<!--            </button>-->
+<!--            <button id = "five">-->
+<!--                5-->
+<!--            </button>-->
+<!--            <button id = "six">-->
+<!--                6-->
+<!--            </button>-->
+<!--            <button id = "seven">-->
+<!--                7-->
+<!--            </button>-->
+<!--            <button id = "eight">-->
+<!--                8-->
+<!--            </button>-->
+<!--            <button id = "nine">-->
+<!--                9-->
+<!--            </button>-->
+<!--            <button id = "zero">-->
+<!--                0-->
+<!--            </button>-->
+<!--            <button id = 'plus'>-->
+<!--                +-->
+<!--            </button>-->
+<!--            <button id = 'minus'>-->
+<!--                - -->
+<!--            </button>-->
+<!--            <button id = 'multiply'>-->
+<!--                *-->
+<!--            </button>-->
+<!--            <button id = 'divide'>-->
+<!--                /-->
+<!--            </button>-->
+<!--            <button id = 'equals'>-->
+<!--                =-->
+<!--            </button>-->
 
 
-
+        </div>
     </div>
-    <div>
-        Display
-        <textarea readonly id = "display"></textarea>
-    </div>
+<!--    <div>-->
+<!--        Display-->
+<!--        <textarea readonly id = "display"></textarea>-->
+<!--    </div>-->
 </body>
 <script src="app.js"></script>
 </html>
