--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
 </head>
 <body>
     <div class = "container">
-        <div class="calc-screen">
+        <div class="calc-body">
             <div class="calc-screen">
-                <div class="calc-typed">2955</div>
+                <div id="display" class="calc-typed">0</div>
             </div>
             <div class="calc-button-row">
                 <div class="button c">C</div>
@@ -24,13 +24,13 @@
                 <div class="button">7</div>
                 <div class="button">8</div>
                 <div class="button">9</div>
-                <div class="button l">x</div>
+                <div class="button l">*</div>
             </div>
             <div class="calc-button-row">
                 <div class="button">4</div>
                 <div class="button">5</div>
                 <div class="button">6</div>
-                <div class="button l">−</div>
+                <div class="button l">-</div>
             </div>
             <div class="calc-button-row">
                 <div class="button">1</div>
